# Autodoc

./: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
src/: config.py  generate_documentation.py  modify_file.py
src/document/: docstring_generator.py  document.py  generate_descriptions.py  generate_documentation.py  get_pipeline.py  split_lines.py
src/transform/: doc_transformer.py  modify_code.py  modify_file.py  transformer.py
tests/: fib.py
