[tool.poetry]
name = "Autodoc"
version = "0.1.0"
description = ""
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
dynamic-executor = "^1.2.6"
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
pydantic = "^2.8.2"
libcst = "^1.4.0"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
peft = "^0.12.0"
transformers = "^4.44.0"
sentencepiece = "^0.2.0"
bitsandbytes = "^0.43.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autodoc = "autodoc:main"
